@@ -50,10 +50,6 @@ public class UpdateBaiVietController extends HttpServlet {
 			int id = Integer.parseInt(request.getParameter("id"));
 			bv = this.dao.findbyid(id);
 			request.setAttribute("bv", bv);
-			Part imagePath = request.getPart("img");
-//			String imageFile = Path.of(imagePath.getSubmittedFileName()).getFileName().toString();
-//			request.setAttribute(imageFile, imageFile);
-			//bv.setImg(imageFile);
 
 		} catch (Exception e) {
 			e.printStackTrace();
@@ -62,28 +58,30 @@ public class UpdateBaiVietController extends HttpServlet {
 
 	}
 
-	/**
-	 * @see HttpServlet#doPost(HttpServletRequest request, HttpServletResponse
-	 *      response)
-	 */
 	protected void doPost(HttpServletRequest request, HttpServletResponse response)
 			throws ServletException, IOException {
 		response.setContentType("text/html;charset=UTF-8");
 		request.setCharacterEncoding("utf-8");
 		try {
-			response.setContentType("text/html;charset=UTF-8");
-			request.setCharacterEncoding("utf-8");
+			
 			HttpSession session = request.getSession();
 			Staff staff = (Staff) session.getAttribute("acountKH");
 			f = daonv.findbyid(1);
+			
 			String realpath = request.getServletContext().getRealPath("/img");
 			Path path = Paths.get(realpath);
 			if (!Files.exists(path)) {
 				Files.createDirectory(path);
 			}
 			Part part = request.getPart("img");
-			String namefile = Path.of(part.getSubmittedFileName()).getFileName().toString();
-			part.write(Paths.get(realpath.toString(), namefile).toString());
+			String filenameUpload = part.getSubmittedFileName();
+			if(!"".equals(filenameUpload)) {
+				String namefile = Path.of(filenameUpload).getFileName().toString();
+				part.write(Paths.get(realpath.toString(), namefile).toString());
+				bv.setImg(namefile);
+			}
+					
+			
 			String mota = request.getParameter("noidung");
 			String tieude = request.getParameter("tieude");
 			String link = request.getParameter("link");
@@ -91,7 +89,9 @@ public class UpdateBaiVietController extends HttpServlet {
 			bv.setLink(link);
 			bv.setNoi_dung(mota);
 			bv.setStaff(f);
+			
 			dao.update(bv);
+			
 			response.sendRedirect(request.getContextPath() + "/HomeStaffController");
 		} catch (Exception e) {
 			e.printStackTrace();
